--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <div class="container">
         <h1>Etch-A-Sketch</h1>
-        <button id="clear">Clear the Drawing Pad</button>
+        <button id="clear" onClick="clearPad()">Clear the Drawing Pad</button>
+        <button id="resize" onClick="resizePad()">Resize the Drawing Pad</button>
+        <button id="resize" onClick="changeMode('color')">Turn on the Color!</button>
         <div id="pad" class="pad"></div>
     </div>
     <script src="scripts.js"></script>
