button centering disable resize button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Etch-A-Sketch</h1>
         <div class="btn-row">
             <button id="clear" onClick="clearPad()">Clear the Drawing Pad</button>
-            <button id="resize" onClick="resizePad()">Resize the Drawing Pad</button>
+            <button id="resize" onClick="resizePad()" disabled>Resize the Drawing Pad (Not Implemented yet)</button>
             <button id="resize" onClick="changeMode('color')">Turn on the Color!</button>
         </div>        
         <div id="pad" class="pad"></div>
